Fix an edge case where early disconnect() can omit delivering of observation.

BUG=607324

Review-Url: https://codereview.chromium.org/1945953002
Cr-Commit-Position: refs/heads/master@{#392436}

Former-commit-id: 32102c0baf205ff54cd16644ddd823a6cb6538f5