third_party/WebKit/Source/core/core.gypi
@@ -4121,6 +4121,7 @@
             'svg/UnsafeSVGAttributeSanitizationTest.cpp',
             'testing/PrivateScriptTestTest.cpp',
             'timing/MemoryInfoTest.cpp',
+            'timing/PerformanceBaseTest.cpp',
             'workers/WorkerThreadTest.cpp',
             'workers/WorkerThreadTestHelper.h',
             'xml/parser/SharedBufferReaderTest.cpp',
